--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,20 @@ img {
   display: block;
   max-width: 100%;
 }
+
+
+
+
+
+
+/* TIMER */
+
+.timer{
+  
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  height: 100px;
+  margin-top: 50px;
+  font-size: 40px;
+}
